# django-account-forms

./: .gitignore  README.rst  make_migrations.py  setup.cfg
django_account_forms/: forms.py  models.py  settings.py  signals.py  utils.py
django_account_forms/migrations/: 0001_initial.py
tests/: __init__.py  mixins.py  models.py  settings.py  test_account_creation.py  test_password_changing.py  test_password_resetting.py  test_user_blocking.py  test_user_status_creation.py
